# tpmp-gr11b-lab4-demon-android

./: .gitignore  CMakeLists.txt  Makefile  README.md  queries.sql  schema.sql
.github/workflows/: build.yml
coverage_html/: index.html
coverage_html/src/: db.c.func-c.html  db.c.func.html  db.c.gcov.html  index.html
docs/: ParfumeMarket.db  database_schema.sql  seed_data.sql
includes/: auth.h  db.h  queries.h
src/: auth.c  db.c  db.h  main.c  queries.c  queries.h
tests/: CMakeLists.txt  test_db.c  test_main.c  test_queries.c
